--- a/style.css
+++ b/style.css
@@ -162,9 +162,13 @@ canvas{
 #opera{
   width:100%;
 }
+#smule{
+  width:100%;
+  margin-top:-13%;
+}
 #vilynx{
   width:100%;
-  margin-top:11%;
+  margin-top:15%;
 }
 #justinmind{
   width:70%;
@@ -219,4 +223,7 @@ hr{
 #a{
   display:none;
   width:100%;
+}
+.lead{
+  text-align: center;
 }
