--- a/index.jade
+++ b/index.jade
@@ -100,7 +100,7 @@ html
               p Nothing! Just bring your beautiful self and ideas and we will provide you with the food, Wi-Fi, workspace, and swag!
             .col-sm-4
               h3 How can I apply?
-              p Just fill out #[a(target='_blank' href='https://smhacks.typeform.com/to/XokTDO') this form]! Applications close Wednesday, August 31 but will be processed on a rolling basis. Make sure to #[a(href='#update') subscribe], follow us on #[a(target='blank' href='https://twitter.com/sanmateohacks') Twitter], and like us on #[a(target='blank' href='https://facebook.com/sanmateohacks') Facebook] for the latest updates!
+              p Just fill out #[a(target='_blank' href='https://smhacks.typeform.com/to/XokTDO') this form]! Applications close Friday, September 9 but will be processed on a rolling basis. Make sure to #[a(href='#update') subscribe], follow us on #[a(target='blank' href='https://twitter.com/sanmateohacks') Twitter], and like us on #[a(target='blank' href='https://facebook.com/sanmateohacks') Facebook] for the latest updates!
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
             .col-sm-4
               h3 What is the schedule like?
@@ -125,7 +125,7 @@ html
                 li <b>Noon</b> - Hacking Starts
                 li <b>Noon</b> - Team Mixer
                 li <b>Noon</b> - Lunch
-                li <b>2pm</b> - Basic Web Development Workshop
+                li <b>2pm</b> - Intro to Git Workshop
                 li <b>4pm</b> - Intro to UX Design Workshop
                 li <b>6:30pm</b> - Dinner
             .col-sm-5.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatex=500)
@@ -161,6 +161,7 @@ html
             .col-sm-6
               a(href='http://smule.com/' target='_blank')
                 img(src='smule.png' id='smule')
+              br
           .row.text-center.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
             .col-sm-4
               a(href='http://justinmind.com' target='_blank')
@@ -275,18 +276,14 @@ html
                 .role Operations
             .col-sm-3
               .member
-                img.img-responsive.img-circle(src='nikhil.jpg')
-                .name Nikhil Dodd
-                .role Outreach
-          .row.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
-            .col-sm-3
-              .member
                 img.img-responsive.img-circle(src='maggie.jpg')
                 .name Maggie Dong
                 .role Outreach
                 .social
                   a(href='https://facebook.com/maggie.dong.79' target='_blank')
                     i.fa.fa-facebook-official
+          .row.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
+            .col-sm-3.col-xs-hidden(style='width:12.499999995%')
             .col-sm-3
               .member
                 img.img-responsive.img-circle(src='thomas.jpg')
