--- a/index.jade
+++ b/index.jade
@@ -157,11 +157,14 @@ html
               a(href='http://sie.com/en/index.html' target='_blank')
                 img(src='sony.png' id='sony')
           .row.text-center.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
-            .col-sm-3.hidden-xs
             .col-sm-6
               a(href='http://smule.com/' target='_blank')
                 img(src='smule.png' id='smule')
+            .col-sm-6
+              a(href='https://ibm.com/' target='_blank')
+                img(src='ibm.png' id='ibm')
               br
+              small(style='font-size:8px') IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.
           .row.text-center.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
             .col-sm-4
               a(href='http://justinmind.com' target='_blank')
