--- a/index.jade
+++ b/index.jade
@@ -195,14 +195,14 @@ html
               a(href='https://hackclub.com' target='_blank')
                 img(data-when='enter' data-from=1 data-to=0 data-translatex=-500 data-opacity=0 src='hackclub.png' id='hackclub')
             .col-md-3.col-sm-6
-              a(href='https://mlh.io' target='_blank')
-                img(data-when='enter' data-from=1 data-to=0 data-translatey=500 data-opacity=0 src='mlh.png' id='mlh')
+              a(href='http://streameducation.org' target='_blank')
+                img(data-when='enter' data-from=1 data-to=0 data-translatey=500 data-opacity=0 src='stream.png' id='stream')
             .col-md-3.col-sm-6
               a(href='https://hackerearth.com/' target='_blank')
                 img(data-when='enter' data-from=1 data-to=0 data-translatex=-500 data-opacity=0 src='hackerearth.png' id='hackerearth')
             .col-md-3.col-sm-6
-              a(href='http://streameducation.org' target='_blank')
-                img(data-when='enter' data-from=1 data-to=0 data-translatey=500 data-opacity=0 src='stream.png' id='stream')
+              a(href='http://www.hacker.fund/' target='_blank')
+                img(data-when='enter' data-from=1 data-to=0 data-translatey=500 data-opacity=0 src='hackerfund.png' id='hackerfund')
           br
           hr
         #team.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatex=1000)
